[gd_scene load_steps=2 format=3 uid="uid://dock_panel_scene"]

[ext_resource type="Script" uid="uid://dock_panel_001" path="res://dock_panel.gd" id="1_dock"]

[node name="DockPanel" type="PanelContainer"]
custom_minimum_size = Vector2(200, 100)
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_dock")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Header" type="PanelContainer" parent="VBox"]
layout_mode = 2

[node name="HBox" type="HBoxContainer" parent="VBox/Header"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="CollapseButton" type="Button" parent="VBox/Header/HBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
flat = true
text = "â–¼"

[node name="TitleLabel" type="Label" parent="VBox/Header/HBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 13
text = "ðŸ“Š Panel Title"

[node name="CloseButton" type="Button" parent="VBox/Header/HBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
flat = true
text = "âœ•"

[node name="ContentMargin" type="MarginContainer" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="Content" type="VBoxContainer" parent="VBox/ContentMargin"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 4

[connection signal="pressed" from="VBox/Header/HBox/CollapseButton" to="." method="_on_collapse_pressed"]
[connection signal="pressed" from="VBox/Header/HBox/CloseButton" to="." method="_on_close_pressed"]
